[package]
name = "py_nrtl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ndarray = "0.15.2"
ndarray-linalg = "0.14.0"
pyo3 = { version = "0.14.2", features = ["extension-module"] }
numpy = "0.14.0"
rayon = "1.5.1"
